--- a/index.html
+++ b/index.html
@@ -623,6 +623,145 @@
         </div>
     </section>
 
+    <section class="bannerBottom">
+        <div class="content">
+            <h1>create, sell & collect</h1>
+            <h2>nfts at nftpro</h2>
+            <p>Aliquam viverra enim commodo sed consequat tempor sit nisl cursus lectus.</p>
+            <div class="btn">
+                <ul>
+                    <li>
+                        <div class="btnNoFill">upload item</div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="imagesBox">
+            <div class="images">
+                <img src="call.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="showcase" id="showcase">
+        <div class="title">
+            <ul>
+                <li>
+                    <h3>lattest news</h3>
+                </li>
+                <li>
+                    <div class="btnFill">view all blog</div>
+                </li>
+            </ul>
+        </div>
+
+        <div class="swiper contentBox">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide cards">
+                    <div class="imgBox">
+                        <img src="1.jpg" alt="">
+                        <div class="date"><i class="fas fa-calendar">19 Nov 2021</i></div>
+                    </div>
+                    <div class="content news">
+                        <h3>Lorem ipsum dolor sit amet.</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, corporis culpa aliquam
+                            vero est veritatis.</p>
+                        <ul class="owner ownerNews">
+                            <li><img src="user1.jpg" alt=""></li>
+                            <li>
+                                <h3><a href="">meow bits</a></h3>
+                            </li>
+                            <li><i class="fas fa-arrow-right"></i><br>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="swiper-slide cards">
+                    <div class="imgBox">
+                        <img src="1.jpg" alt="">
+                        <div class="date"><i class="fas fa-calendar">19 Nov 2021</i></div>
+                    </div>
+                    <div class="content news">
+                        <h3>Lorem ipsum dolor sit amet.</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, corporis culpa aliquam
+                            vero est veritatis.</p>
+                        <ul class="owner ownerNews">
+                            <li><img src="user1.jpg" alt=""></li>
+                            <li>
+                                <h3><a href="">meow bits</a></h3>
+                            </li>
+                            <li><i class="fas fa-arrow-right"></i><br>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="swiper-slide cards">
+                    <div class="imgBox">
+                        <img src="1.jpg" alt="">
+                        <div class="date"><i class="fas fa-calendar">19 Nov 2021</i></div>
+                    </div>
+                    <div class="content news">
+                        <h3>Lorem ipsum dolor sit amet.</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, corporis culpa aliquam
+                            vero est veritatis.</p>
+                        <ul class="owner ownerNews">
+                            <li><img src="user1.jpg" alt=""></li>
+                            <li>
+                                <h3><a href="">meow bits</a></h3>
+                            </li>
+                            <li><i class="fas fa-arrow-right"></i><br>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="swiper-slide cards">
+                    <div class="imgBox">
+                        <img src="1.jpg" alt="">
+                        <div class="date"><i class="fas fa-calendar">19 Nov 2021</i></div>
+                    </div>
+                    <div class="content news">
+                        <h3>Lorem ipsum dolor sit amet.</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, corporis culpa aliquam
+                            vero est veritatis.</p>
+                        <ul class="owner ownerNews">
+                            <li><img src="user1.jpg" alt=""></li>
+                            <li>
+                                <h3><a href="">meow bits</a></h3>
+                            </li>
+                            <li><i class="fas fa-arrow-right"></i><br>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="swiper-slide cards">
+                    <div class="imgBox">
+                        <img src="1.jpg" alt="">
+                        <div class="date"><i class="fas fa-calendar">19 Nov 2021</i></div>
+                    </div>
+                    <div class="content news">
+                        <h3>Lorem ipsum dolor sit amet.</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, corporis culpa aliquam
+                            vero est veritatis.</p>
+                        <ul class="owner ownerNews">
+                            <li><img src="user1.jpg" alt=""></li>
+                            <li>
+                                <h3><a href="">meow bits</a></h3>
+                            </li>
+                            <li><i class="fas fa-arrow-right"></i><br>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
 
     <script src="script.js"></script>
 </body>
