--- a/index.html
+++ b/index.html
@@ -161,11 +161,12 @@
             <div class="btn">
                 <ul>
                     <li>
-                        <div class="btnFill">explore now</div>
+                        <a href="#bannerBottom" class="btnFill">explore now</a>
                     </li>
                     <li>
-                        <div class="btnNoFill">place a bids</div>
+                        <a href="" class="btnNoFill">explore now</a>
                     </li>
+
                 </ul>
             </div>
         </div>
@@ -226,7 +227,7 @@
                     <div class="content">
                         <h3>colorfull abstract painting</h3>
                         <ul class="owner">
-                            <li><img src="user1.jpg" alt=""></li>
+                            <li><img src="user2.jpg" alt=""></li>
                             <li><span>owned by</span><br>
                                 <h3><a href="">meow bits</a></h3>
                             </li>
@@ -251,7 +252,7 @@
                     <div class="content">
                         <h3>colorfull abstract painting</h3>
                         <ul class="owner">
-                            <li><img src="user1.jpg" alt=""></li>
+                            <li><img src="user3.jpg" alt=""></li>
                             <li><span>owned by</span><br>
                                 <h3><a href="">meow bits</a></h3>
                             </li>
@@ -276,7 +277,7 @@
                     <div class="content">
                         <h3>colorfull abstract painting</h3>
                         <ul class="owner">
-                            <li><img src="user1.jpg" alt=""></li>
+                            <li><img src="user4.jpg" alt=""></li>
                             <li><span>owned by</span><br>
                                 <h3><a href="">meow bits</a></h3>
                             </li>
@@ -301,7 +302,7 @@
                     <div class="content">
                         <h3>colorfull abstract painting</h3>
                         <ul class="owner">
-                            <li><img src="user1.jpg" alt=""></li>
+                            <li><img src="user5.jpg" alt=""></li>
                             <li><span>owned by</span><br>
                                 <h3><a href="">meow bits</a></h3>
                             </li>
@@ -374,11 +375,11 @@
                 <ul>
                     <li>
                         <div class="images">
-                            <img src="user1.jpg" alt="">
+                            <img src="user2.jpg" alt="">
                             <i class="fas fa-check"></i>
                         </div>
                     </li>
-                    <li><span>wow creates</span><br>
+                    <li><span>meta boss</span><br>
                         <p>3.656 eth</p>
                     </li>
                 </ul>
@@ -387,10 +388,10 @@
                 <ul>
                     <li>
                         <div class="images">
-                            <img src="user1.jpg" alt="">
+                            <img src="user3.jpg" alt="">
                         </div>
                     </li>
-                    <li><span>wow creates</span><br>
+                    <li><span>just wee</span><br>
                         <p>3.656 eth</p>
                     </li>
                 </ul>
@@ -399,24 +400,11 @@
                 <ul>
                     <li>
                         <div class="images">
-                            <img src="user1.jpg" alt="">
+                            <img src="user4.jpg" alt="">
                             <i class="fas fa-check"></i>
                         </div>
                     </li>
-                    <li><span>wow creates</span><br>
-                        <p>3.656 eth</p>
-                    </li>
-                </ul>
-            </div>
-            <div class="cards">
-                <ul>
-                    <li>
-                        <div class="images">
-                            <img src="user1.jpg" alt="">
-                            <i class="fas fa-check"></i>
-                        </div>
-                    </li>
-                    <li><span>wow creates</span><br>
+                    <li><span>valk creates</span><br>
                         <p>3.656 eth</p>
                     </li>
                 </ul>
@@ -429,7 +417,20 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </li>
-                    <li><span>wow creates</span><br>
+                    <li><span>craftold</span><br>
+                        <p>3.656 eth</p>
+                    </li>
+                </ul>
+            </div>
+            <div class="cards">
+                <ul>
+                    <li>
+                        <div class="images">
+                            <img src="user5.jpg" alt="">
+                            <i class="fas fa-check"></i>
+                        </div>
+                    </li>
+                    <li><span>meow bits</span><br>
                         <p>3.656 eth</p>
                     </li>
                 </ul>
@@ -442,7 +443,7 @@
                             <i class="fas fa-check"></i>
                         </div>
                     </li>
-                    <li><span>wow creates</span><br>
+                    <li><span>jhan sha</span><br>
                         <p>3.656 eth</p>
                     </li>
                 </ul>
@@ -451,11 +452,11 @@
                 <ul>
                     <li>
                         <div class="images">
-                            <img src="user1.jpg" alt="">
+                            <img src="user6.jpg" alt="">
                             <i class="fas fa-check"></i>
                         </div>
                     </li>
-                    <li><span>wow creates</span><br>
+                    <li><span>mr. shaq</span><br>
                         <p>3.656 eth</p>
                     </li>
                 </ul>
@@ -510,7 +511,7 @@
                 <div class="content">
                     <h3>colorfull abstract painting</h3>
                     <ul class="owner">
-                        <li><img src="user1.jpg" alt=""></li>
+                        <li><img src="user2.jpg" alt=""></li>
                         <li><span>owned by</span><br>
                             <h3><a href="">meow bits</a></h3>
                         </li>
@@ -534,7 +535,7 @@
                 <div class="content">
                     <h3>colorfull abstract painting</h3>
                     <ul class="owner">
-                        <li><img src="user1.jpg" alt=""></li>
+                        <li><img src="user3.jpg" alt=""></li>
                         <li><span>owned by</span><br>
                             <h3><a href="">meow bits</a></h3>
                         </li>
@@ -558,7 +559,7 @@
                 <div class="content">
                     <h3>colorfull abstract painting</h3>
                     <ul class="owner">
-                        <li><img src="user1.jpg" alt=""></li>
+                        <li><img src="user4.jpg" alt=""></li>
                         <li><span>owned by</span><br>
                             <h3><a href="">meow bits</a></h3>
                         </li>
@@ -582,7 +583,7 @@
                 <div class="content">
                     <h3>colorfull abstract painting</h3>
                     <ul class="owner">
-                        <li><img src="user1.jpg" alt=""></li>
+                        <li><img src="user5.jpg" alt=""></li>
                         <li><span>owned by</span><br>
                             <h3><a href="">meow bits</a></h3>
                         </li>
@@ -606,7 +607,7 @@
                 <div class="content">
                     <h3>colorfull abstract painting</h3>
                     <ul class="owner">
-                        <li><img src="user1.jpg" alt=""></li>
+                        <li><img src="user6.jpg" alt=""></li>
                         <li><span>owned by</span><br>
                             <h3><a href="">meow bits</a></h3>
                         </li>
@@ -623,7 +624,7 @@
         </div>
     </section>
 
-    <section class="bannerBottom">
+    <section class="bannerBottom" id="bannerBottom">
         <div class="content">
             <h1>create, sell & collect</h1>
             <h2>nfts at nftpro</h2>
@@ -686,7 +687,7 @@
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, corporis culpa aliquam
                             vero est veritatis.</p>
                         <ul class="owner ownerNews">
-                            <li><img src="user1.jpg" alt=""></li>
+                            <li><img src="user2.jpg" alt=""></li>
                             <li>
                                 <h3><a href="">meow bits</a></h3>
                             </li>
@@ -705,7 +706,7 @@
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, corporis culpa aliquam
                             vero est veritatis.</p>
                         <ul class="owner ownerNews">
-                            <li><img src="user1.jpg" alt=""></li>
+                            <li><img src="user3.jpg" alt=""></li>
                             <li>
                                 <h3><a href="">meow bits</a></h3>
                             </li>
@@ -724,7 +725,7 @@
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, corporis culpa aliquam
                             vero est veritatis.</p>
                         <ul class="owner ownerNews">
-                            <li><img src="user1.jpg" alt=""></li>
+                            <li><img src="user4.jpg" alt=""></li>
                             <li>
                                 <h3><a href="">meow bits</a></h3>
                             </li>
@@ -743,7 +744,7 @@
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, corporis culpa aliquam
                             vero est veritatis.</p>
                         <ul class="owner ownerNews">
-                            <li><img src="user1.jpg" alt=""></li>
+                            <li><img src="user5.jpg" alt=""></li>
                             <li>
                                 <h3><a href="">meow bits</a></h3>
                             </li>
@@ -752,8 +753,116 @@
                         </ul>
                     </div>
                 </div>
-
             </div>
+        </div>
+    </section>
+
+    <section class="subscribe">
+        <div class="contentNews">
+            <ul>
+                <li><img src="subscribe.png" alt=""></li>
+                <li>
+                    <h1>newslatter</h1><br>
+                    <h3>subscribe here for get every single updates</h3>
+                </li>
+            </ul>
+        </div>
+        <div class="subsForm">
+            <input type="text" placeholder="enter your emails address"><button>subscribe now</button>
+        </div>
+    </section>
+
+
+    <section class="footer">
+        <div class="box1">
+            <h3>our address</h3>
+            <ul class="content">
+                <li>
+                    <div class="logos">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <p>PO Box 16122 Collins Street West Victoria 8007 Australia</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="logos">
+                        <i class="fas fa-phone"></i>
+                        <p>
+                            +61 3 8376 6284</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="logos">
+                        <i class="fas fa-envelope"></i>
+                        <p>info123@gmail.com</p>
+                    </div>
+                </li>
+                <ul class="sci">
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-linkedin"></i>
+                </ul>
+            </ul>
+        </div>
+        <div class="box1">
+            <h3>explore</h3>
+            <ul class="content">
+                <li>
+                    <p><a href="">explore artwork</a></p>
+                </li>
+                <li>
+                    <p><a href="">single artwork</a></p>
+                </li>
+                <li>
+                    <p><a href="">explore creator</a></p>
+                </li>
+                <li>
+                    <p><a href="">single creator</a></p>
+                </li>
+                <li>
+                    <p><a href="">all nft</a></p>
+                </li>
+            </ul>
+        </div>
+        <div class="box1">
+            <h3>community</h3>
+            <ul class="content">
+                <li>
+                    <p><a href="">help center</a></p>
+                </li>
+                <li>
+                    <p><a href="">partner</a></p>
+                </li>
+                <li>
+                    <p><a href="">suggestion</a></p>
+                </li>
+                <li>
+                    <p><a href="">blog</a></p>
+                </li>
+                <li>
+                    <p><a href="">newslatter</a></p>
+                </li>
+            </ul>
+        </div>
+        <div class="box1">
+            <h3>info</h3>
+            <ul class="content">
+                <li>
+                    <p><a href="">faq</a></p>
+                </li>
+                <li>
+                    <p><a href="">tracking</a></p>
+                </li>
+                <li>
+                    <p><a href="">privacy police</a></p>
+                </li>
+                <li>
+                    <p><a href="">blog</a></p>
+                </li>
+                <li>
+                    <p><a href="">term condition</a></p>
+                </li>
+            </ul>
         </div>
     </section>
 
