--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         </div>
         <div class="imagesBox">
             <div class="images">
-                <img src="hero.png" alt="">
+                <img src="img/hero.png" alt="">
             </div>
         </div>
     </section>
@@ -184,7 +184,7 @@
                     <h3>live auction</h3>
                 </li>
                 <li>
-                    <div class="btnFill">view all explore</div>
+                    <a href="showcase.html" class="btnFill">view all explore</a>
                 </li>
             </ul>
         </div>
@@ -193,7 +193,7 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide cards">
                     <div class="imgBox">
-                        <img src="1.jpg" alt="">
+                        <img src="img/1.jpg" alt="">
                         <div class="likes">
                             <i class="fas fa-heart"></i>1.2k
                         </div>
@@ -202,7 +202,7 @@
                     <div class="content">
                         <h3>colorfull abstract painting</h3>
                         <ul class="owner">
-                            <li><img src="user1.jpg" alt=""></li>
+                            <li><img src="img/user1.jpg" alt=""></li>
                             <li><span>owned by</span><br>
                                 <h3><a href="">meow bits</a></h3>
                             </li>
@@ -218,7 +218,7 @@
                 </div>
                 <div class="swiper-slide cards">
                     <div class="imgBox">
-                        <img src="2.jpg" alt="">
+                        <img src="img/2.jpg" alt="">
                         <div class="likes">
                             <i class="fas fa-heart"></i>1.2k
                         </div>
@@ -227,7 +227,7 @@
                     <div class="content">
                         <h3>colorfull abstract painting</h3>
                         <ul class="owner">
-                            <li><img src="user2.jpg" alt=""></li>
+                            <li><img src="img/user2.jpg" alt=""></li>
                             <li><span>owned by</span><br>
                                 <h3><a href="">meow bits</a></h3>
                             </li>
@@ -243,7 +243,7 @@
                 </div>
                 <div class="swiper-slide cards">
                     <div class="imgBox">
-                        <img src="3.jpg" alt="">
+                        <img src="img/3.jpg" alt="">
                         <div class="likes">
                             <i class="fas fa-heart"></i>1.2k
                         </div>
@@ -252,7 +252,7 @@
                     <div class="content">
                         <h3>colorfull abstract painting</h3>
                         <ul class="owner">
-                            <li><img src="user3.jpg" alt=""></li>
+                            <li><img src="img/user3.jpg" alt=""></li>
                             <li><span>owned by</span><br>
                                 <h3><a href="">meow bits</a></h3>
                             </li>
@@ -268,7 +268,7 @@
                 </div>
                 <div class="swiper-slide cards">
                     <div class="imgBox">
-                        <img src="4.jpg" alt="">
+                        <img src="img/4.jpg" alt="">
                         <div class="likes">
                             <i class="fas fa-heart"></i>1.2k
                         </div>
@@ -277,7 +277,7 @@
                     <div class="content">
                         <h3>colorfull abstract painting</h3>
                         <ul class="owner">
-                            <li><img src="user4.jpg" alt=""></li>
+                            <li><img src="img/user4.jpg" alt=""></li>
                             <li><span>owned by</span><br>
                                 <h3><a href="">meow bits</a></h3>
                             </li>
@@ -293,7 +293,7 @@
                 </div>
                 <div class="swiper-slide cards">
                     <div class="imgBox">
-                        <img src="5.jpg" alt="">
+                        <img src="img/5.jpg" alt="">
                         <div class="likes">
                             <i class="fas fa-heart"></i>1.2k
                         </div>
@@ -302,7 +302,7 @@
                     <div class="content">
                         <h3>colorfull abstract painting</h3>
                         <ul class="owner">
-                            <li><img src="user5.jpg" alt=""></li>
+                            <li><img src="img/user5.jpg" alt=""></li>
                             <li><span>owned by</span><br>
                                 <h3><a href="">meow bits</a></h3>
                             </li>
@@ -318,7 +318,7 @@
                 </div>
                 <div class="swiper-slide cards">
                     <div class="imgBox">
-                        <img src="6.jpg" alt="">
+                        <img src="img/6.jpg" alt="">
                         <div class="likes">
                             <i class="fas fa-heart"></i>1.2k
                         </div>
@@ -327,7 +327,7 @@
                     <div class="content">
                         <h3>colorfull abstract painting</h3>
                         <ul class="owner">
-                            <li><img src="user1.jpg" alt=""></li>
+                            <li><img src="img/user1.jpg" alt=""></li>
                             <li><span>owned by</span><br>
                                 <h3><a href="">meow bits</a></h3>
                             </li>
@@ -352,7 +352,7 @@
                     <h3>top creators</h3>
                 </li>
                 <li>
-                    <div class="btnFill">view all creators</div>
+                    <a href="allCreator.html" class="btnFill">view all creators</a>
                 </li>
             </ul>
         </div>
@@ -362,7 +362,7 @@
                 <ul>
                     <li>
                         <div class="images">
-                            <img src="user1.jpg" alt="">
+                            <img src="img/user1.jpg" alt="">
                             <i class="fas fa-check"></i>
                         </div>
                     </li>
@@ -375,7 +375,7 @@
                 <ul>
                     <li>
                         <div class="images">
-                            <img src="user2.jpg" alt="">
+                            <img src="img/user2.jpg" alt="">
                             <i class="fas fa-check"></i>
                         </div>
                     </li>
@@ -388,7 +388,7 @@
                 <ul>
                     <li>
                         <div class="images">
-                            <img src="user3.jpg" alt="">
+                            <img src="img/user3.jpg" alt="">
                         </div>
                     </li>
                     <li><span>just wee</span><br>
@@ -400,7 +400,7 @@
                 <ul>
                     <li>
                         <div class="images">
-                            <img src="user4.jpg" alt="">
+                            <img src="img/user4.jpg" alt="">
                             <i class="fas fa-check"></i>
                         </div>
                     </li>
@@ -413,7 +413,7 @@
                 <ul>
                     <li>
                         <div class="images">
-                            <img src="user1.jpg" alt="">
+                            <img src="img/user1.jpg" alt="">
                             <i class="fas fa-check"></i>
                         </div>
                     </li>
@@ -426,7 +426,7 @@
                 <ul>
                     <li>
                         <div class="images">
-                            <img src="user5.jpg" alt="">
+                            <img src="img/user5.jpg" alt="">
                             <i class="fas fa-check"></i>
                         </div>
                     </li>
@@ -439,7 +439,7 @@
                 <ul>
                     <li>
                         <div class="images">
-                            <img src="user1.jpg" alt="">
+                            <img src="img/user1.jpg" alt="">
                             <i class="fas fa-check"></i>
                         </div>
                     </li>
@@ -452,7 +452,7 @@
                 <ul>
                     <li>
                         <div class="images">
-                            <img src="user6.jpg" alt="">
+                            <img src="img/user6.jpg" alt="">
                             <i class="fas fa-check"></i>
                         </div>
                     </li>
@@ -471,7 +471,7 @@
                     <h3>featured arts</h3>
                 </li>
                 <li>
-                    <div class="btnFill">view all explore</div>
+                    <a href="allArts.html" class="btnFill">view all explore</a>
                 </li>
             </ul>
         </div>
@@ -479,7 +479,7 @@
         <div class="featuredContent">
             <div class="cards">
                 <div class="imgBox">
-                    <img src="2.jpg" alt="">
+                    <img src="img/2.jpg" alt="">
                     <div class="likes">
                         <i class="fas fa-heart"></i>1.2k
                     </div>
@@ -487,7 +487,7 @@
                 <div class="content">
                     <h3>colorfull abstract painting</h3>
                     <ul class="owner">
-                        <li><img src="user1.jpg" alt=""></li>
+                        <li><img src="img/user1.jpg" alt=""></li>
                         <li><span>owned by</span><br>
                             <h3><a href="">meow bits</a></h3>
                         </li>
@@ -503,7 +503,7 @@
             </div>
             <div class="cards">
                 <div class="imgBox">
-                    <img src="2.jpg" alt="">
+                    <img src="img/2.jpg" alt="">
                     <div class="likes">
                         <i class="fas fa-heart"></i>1.2k
                     </div>
@@ -511,7 +511,7 @@
                 <div class="content">
                     <h3>colorfull abstract painting</h3>
                     <ul class="owner">
-                        <li><img src="user2.jpg" alt=""></li>
+                        <li><img src="img/user2.jpg" alt=""></li>
                         <li><span>owned by</span><br>
                             <h3><a href="">meow bits</a></h3>
                         </li>
@@ -527,7 +527,7 @@
             </div>
             <div class="cards">
                 <div class="imgBox">
-                    <img src="2.jpg" alt="">
+                    <img src="img/2.jpg" alt="">
                     <div class="likes">
                         <i class="fas fa-heart"></i>1.2k
                     </div>
@@ -535,7 +535,7 @@
                 <div class="content">
                     <h3>colorfull abstract painting</h3>
                     <ul class="owner">
-                        <li><img src="user3.jpg" alt=""></li>
+                        <li><img src="img/user3.jpg" alt=""></li>
                         <li><span>owned by</span><br>
                             <h3><a href="">meow bits</a></h3>
                         </li>
@@ -551,7 +551,7 @@
             </div>
             <div class="cards">
                 <div class="imgBox">
-                    <img src="2.jpg" alt="">
+                    <img src="img/2.jpg" alt="">
                     <div class="likes">
                         <i class="fas fa-heart"></i>1.2k
                     </div>
@@ -559,7 +559,7 @@
                 <div class="content">
                     <h3>colorfull abstract painting</h3>
                     <ul class="owner">
-                        <li><img src="user4.jpg" alt=""></li>
+                        <li><img src="img/user4.jpg" alt=""></li>
                         <li><span>owned by</span><br>
                             <h3><a href="">meow bits</a></h3>
                         </li>
@@ -575,7 +575,7 @@
             </div>
             <div class="cards">
                 <div class="imgBox">
-                    <img src="2.jpg" alt="">
+                    <img src="img/2.jpg" alt="">
                     <div class="likes">
                         <i class="fas fa-heart"></i>1.2k
                     </div>
@@ -583,7 +583,7 @@
                 <div class="content">
                     <h3>colorfull abstract painting</h3>
                     <ul class="owner">
-                        <li><img src="user5.jpg" alt=""></li>
+                        <li><img src="img/user5.jpg" alt=""></li>
                         <li><span>owned by</span><br>
                             <h3><a href="">meow bits</a></h3>
                         </li>
@@ -599,7 +599,7 @@
             </div>
             <div class="cards">
                 <div class="imgBox">
-                    <img src="2.jpg" alt="">
+                    <img src="img/2.jpg" alt="">
                     <div class="likes">
                         <i class="fas fa-heart"></i>1.2k
                     </div>
@@ -607,7 +607,7 @@
                 <div class="content">
                     <h3>colorfull abstract painting</h3>
                     <ul class="owner">
-                        <li><img src="user6.jpg" alt=""></li>
+                        <li><img src="img/user6.jpg" alt=""></li>
                         <li><span>owned by</span><br>
                             <h3><a href="">meow bits</a></h3>
                         </li>
@@ -639,7 +639,7 @@
         </div>
         <div class="imagesBox">
             <div class="images">
-                <img src="call.png" alt="">
+                <img src="img/call.png" alt="">
             </div>
         </div>
     </section>
@@ -651,7 +651,7 @@
                     <h3>lattest news</h3>
                 </li>
                 <li>
-                    <div class="btnFill">view all blog</div>
+                    <a href="allNews.html" class="btnFill">view all blog</a>
                 </li>
             </ul>
         </div>
@@ -660,7 +660,7 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide cards">
                     <div class="imgBox">
-                        <img src="1.jpg" alt="">
+                        <img src="img/1.jpg" alt="">
                         <div class="date"><i class="fas fa-calendar">19 Nov 2021</i></div>
                     </div>
                     <div class="content news">
@@ -668,7 +668,7 @@
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, corporis culpa aliquam
                             vero est veritatis.</p>
                         <ul class="owner ownerNews">
-                            <li><img src="user1.jpg" alt=""></li>
+                            <li><img src="img/user1.jpg" alt=""></li>
                             <li>
                                 <h3><a href="">meow bits</a></h3>
                             </li>
@@ -679,7 +679,7 @@
                 </div>
                 <div class="swiper-slide cards">
                     <div class="imgBox">
-                        <img src="1.jpg" alt="">
+                        <img src="img/1.jpg" alt="">
                         <div class="date"><i class="fas fa-calendar">19 Nov 2021</i></div>
                     </div>
                     <div class="content news">
@@ -687,7 +687,7 @@
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, corporis culpa aliquam
                             vero est veritatis.</p>
                         <ul class="owner ownerNews">
-                            <li><img src="user2.jpg" alt=""></li>
+                            <li><img src="img/user2.jpg" alt=""></li>
                             <li>
                                 <h3><a href="">meow bits</a></h3>
                             </li>
@@ -698,7 +698,7 @@
                 </div>
                 <div class="swiper-slide cards">
                     <div class="imgBox">
-                        <img src="1.jpg" alt="">
+                        <img src="img/1.jpg" alt="">
                         <div class="date"><i class="fas fa-calendar">19 Nov 2021</i></div>
                     </div>
                     <div class="content news">
@@ -706,7 +706,7 @@
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, corporis culpa aliquam
                             vero est veritatis.</p>
                         <ul class="owner ownerNews">
-                            <li><img src="user3.jpg" alt=""></li>
+                            <li><img src="img/user3.jpg" alt=""></li>
                             <li>
                                 <h3><a href="">meow bits</a></h3>
                             </li>
@@ -717,7 +717,7 @@
                 </div>
                 <div class="swiper-slide cards">
                     <div class="imgBox">
-                        <img src="1.jpg" alt="">
+                        <img src="img/1.jpg" alt="">
                         <div class="date"><i class="fas fa-calendar">19 Nov 2021</i></div>
                     </div>
                     <div class="content news">
@@ -725,7 +725,7 @@
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, corporis culpa aliquam
                             vero est veritatis.</p>
                         <ul class="owner ownerNews">
-                            <li><img src="user4.jpg" alt=""></li>
+                            <li><img src="img/user4.jpg" alt=""></li>
                             <li>
                                 <h3><a href="">meow bits</a></h3>
                             </li>
@@ -736,7 +736,7 @@
                 </div>
                 <div class="swiper-slide cards">
                     <div class="imgBox">
-                        <img src="1.jpg" alt="">
+                        <img src="img/1.jpg" alt="">
                         <div class="date"><i class="fas fa-calendar">19 Nov 2021</i></div>
                     </div>
                     <div class="content news">
@@ -744,7 +744,7 @@
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident, corporis culpa aliquam
                             vero est veritatis.</p>
                         <ul class="owner ownerNews">
-                            <li><img src="user5.jpg" alt=""></li>
+                            <li><img src="img/user5.jpg" alt=""></li>
                             <li>
                                 <h3><a href="">meow bits</a></h3>
                             </li>
@@ -760,7 +760,7 @@
     <section class="subscribe">
         <div class="contentNews">
             <ul>
-                <li><img src="subscribe.png" alt=""></li>
+                <li><img src="img/subscribe.png" alt=""></li>
                 <li>
                     <h1>newslatter</h1><br>
                     <h3>subscribe here for get every single updates</h3>
@@ -864,6 +864,10 @@
                 </li>
             </ul>
         </div>
+    </section>
+
+    <section class="copyright">
+        <p>Build With Love By Nuryana N</p>
     </section>
 
 
